src/objects/Apttus_Proposal_Proposal_c__x.object
<CustomObject>
    <fields>
        <fullName>APTS_India_Currency_c__c</fullName>
        <externalDeveloperName>APTS_India_Currency__c</externalDeveloperName>
        <label>India Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Argentine Peso</fullName>
                </value>
                <value>
                    <fullName>Australian Dollar</fullName>
                </value>
                <value>
                    <fullName>Brazilian Real</fullName>
                </value>
                <value>
                    <fullName>British Pound</fullName>
                </value>
                <value>
                    <fullName>Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName>Chinese CNY</fullName>
                </value>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>Indian Rupee</fullName>
                </value>
                <value>
                    <fullName>Japanese Yen</fullName>
                </value>
                <value>
                    <fullName>Singapore Dollar</fullName>
                </value>
                <value>
                    <fullName>South African Rand</fullName>
                </value>
                <value>
                    <fullName>U.S. Dollar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_India_Discount_c__c</fullName>
        <externalDeveloperName>APTS_India_Discount__c</externalDeveloperName>
        <label>India Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_India_First_Patient_In_Date_c__c</fullName>
        <externalDeveloperName>APTS_India_First_Patient_In_Date__c</externalDeveloperName>
        <label>Last Patient In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_India_Inflation_Factor_c__c</fullName>
        <externalDeveloperName>APTS_India_Inflation_Factor__c</externalDeveloperName>
        <inlineHelpText>This is the Inflation factor for India Region as per the Study Inflation on Proposal.</inlineHelpText>
        <label>India Inflation Factor</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_India_Region_Name_c__c</fullName>
        <externalDeveloperName>APTS_India_Region_Name__c</externalDeveloperName>
        <label>India Region Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_India_TotalSites_c__c</fullName>
        <externalDeveloperName>APTS_India_TotalSites__c</externalDeveloperName>
        <label>India TotalSites</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_India_Total_Patient_Visits_c__c</fullName>
        <externalDeveloperName>APTS_India_Total_Patient_Visits__c</externalDeveloperName>
        <label>India Total Patient Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_India_Total_Rate_Card_Fees_c__c</fullName>
        <externalDeveloperName>APTS_India_Total_Rate_Card_Fees__c</externalDeveloperName>
        <inlineHelpText>This is a roll-up of all Proposal Line Items Net Price for India Region which are eligible for Lumpsum Rate Card Inflation.</inlineHelpText>
        <label>India Total Rate Card Fees</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Inflation_Beyond_RateCard_StartD__c</fullName>
        <externalDeveloperName>APTS_Inflation_Beyond_RateCard_StartDate__c</externalDeveloperName>
        <label>Inflation Beyond Rate Card Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Investigator_Fee_c__c</fullName>
        <externalDeveloperName>APTS_Investigator_Fee__c</externalDeveloperName>
        <label>Investigator Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Cloned_Proposal_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Is_Cloned_Proposal__c</externalDeveloperName>
        <label>Is Cloned Proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Cloned_for_782_PRI_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Is_Cloned_for_782_PRI__c</externalDeveloperName>
        <label>Is Cloned for 782 PRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_No_Of_Batch_Shipment_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Is_No_Of_Batch_Shipment_Changed__c</externalDeveloperName>
        <label>Is No Of Batch Shipment Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Presented_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Is_Presented__c</externalDeveloperName>
        <label>Is Presented?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Japan_Conversion_Rate_c__c</fullName>
        <externalDeveloperName>APTS_Japan_Conversion_Rate__c</externalDeveloperName>
        <label>Japan Conversion Rate</label>
        <precision>10</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Japan_Currency2_c__c</fullName>
        <externalDeveloperName>APTS_Japan_Currency2__c</externalDeveloperName>
        <label>Japan Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Argentine Peso</fullName>
                </value>
                <value>
                    <fullName>Australian Dollar</fullName>
                </value>
                <value>
                    <fullName>Brazilian Real</fullName>
                </value>
                <value>
                    <fullName>British Pound</fullName>
                </value>
                <value>
                    <fullName>Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName>Chinese CNY</fullName>
                </value>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>Indian Rupee</fullName>
                </value>
                <value>
                    <fullName>Japanese Yen</fullName>
                </value>
                <value>
                    <fullName>Singapore Dollar</fullName>
                </value>
                <value>
                    <fullName>South African Rand</fullName>
                </value>
                <value>
                    <fullName>U.S. Dollar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Japan_Currency_Rate_c__c</fullName>
        <externalDeveloperName>APTS_Japan_Currency_Rate__c</externalDeveloperName>
        <label>Currency Rate</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Japan_Currency_c__c</fullName>
        <externalDeveloperName>APTS_Japan_Currency__c</externalDeveloperName>
        <label>Japan Currency</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Japan_Discount_c__c</fullName>
        <externalDeveloperName>APTS_Japan_Discount__c</externalDeveloperName>
        <label>Japan Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Japan_First_Patient_In_Date_c__c</fullName>
        <externalDeveloperName>APTS_Japan_First_Patient_In_Date__c</externalDeveloperName>
        <label>Japan First Patient In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Japan_Inflation_Factor_c__c</fullName>
        <externalDeveloperName>APTS_Japan_Inflation_Factor__c</externalDeveloperName>
        <inlineHelpText>This is the Inflation factor for Japan Region as per the Study Inflation on Proposal.</inlineHelpText>
        <label>Japan Inflation Factor</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Japan_Region_Name_c__c</fullName>
        <externalDeveloperName>APTS_Japan_Region_Name__c</externalDeveloperName>
        <label>Japan Region Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Japan_Study_Id_c__c</fullName>
        <externalDeveloperName>APTS_Japan_Study_Id__c</externalDeveloperName>
        <label>Japan Study Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Japan_TotalSites_c__c</fullName>
        <externalDeveloperName>APTS_Japan_TotalSites__c</externalDeveloperName>
        <label>Japan TotalSites</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Japan_Total_Count_c__c</fullName>
        <externalDeveloperName>APTS_Japan_Total_Count__c</externalDeveloperName>
        <label>Japan Total Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Japan_Total_Patient_Visits_c__c</fullName>
        <externalDeveloperName>APTS_Japan_Total_Patient_Visits__c</externalDeveloperName>
        <label>Japan Total Patient Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Japan_Total_Rate_Card_Fees_c__c</fullName>
        <externalDeveloperName>APTS_Japan_Total_Rate_Card_Fees__c</externalDeveloperName>
        <inlineHelpText>This is a roll-up of all Proposal Line Items Net Price for Japan Region which are eligible for Lumpsum Rate Card Inflation.</inlineHelpText>
        <label>Japan Total Rate Card Fees</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Latin_America_Conversion_Rate_c__c</fullName>
        <externalDeveloperName>APTS_Latin_America_Conversion_Rate__c</externalDeveloperName>
        <label>Latin America Conversion Rate</label>
        <precision>13</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Latin_America_Currency2_c__c</fullName>
        <externalDeveloperName>APTS_Latin_America_Currency2__c</externalDeveloperName>
        <label>Latin America Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>British Pound</fullName>
                </value>
                <value>
                    <fullName>Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName>Chinese CNY</fullName>
                </value>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>Indian Rupee</fullName>
                </value>
                <value>
                    <fullName>U.S. Dollar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Latin_America_Currency_Rate_c__c</fullName>
        <externalDeveloperName>APTS_Latin_America_Currency_Rate__c</externalDeveloperName>
        <label>Currency Rate</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Latin_America_Currency_c__c</fullName>
        <externalDeveloperName>APTS_Latin_America_Currency__c</externalDeveloperName>
        <label>Latin America Currency</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Latin_America_Discount_c__c</fullName>
        <externalDeveloperName>APTS_Latin_America_Discount__c</externalDeveloperName>
        <label>Latin America Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Latin_America_First_Patient_In_D__c</fullName>
        <externalDeveloperName>APTS_Latin_America_First_Patient_In_Date__c</externalDeveloperName>
        <label>Latin America First Patient In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Latin_America_Region_Name_c__c</fullName>
        <externalDeveloperName>APTS_Latin_America_Region_Name__c</externalDeveloperName>
        <label>Latin America Region Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Latin_America_Study_Id_c__c</fullName>
        <externalDeveloperName>APTS_Latin_America_Study_Id__c</externalDeveloperName>
        <label>Latin America Study Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Latin_America_Total_Count_c__c</fullName>
        <externalDeveloperName>APTS_Latin_America_Total_Count__c</externalDeveloperName>
        <label>Latin America Total Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Lead_Region_c__c</fullName>
        <externalDeveloperName>APTS_Lead_Region__c</externalDeveloperName>
        <label>Lead Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Asia-Pac</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_List_Assays_require_specific_Low__c</fullName>
        <externalDeveloperName>APTS_List_Assays_require_specific_Lower__c</externalDeveloperName>
        <inlineHelpText>Are there any assays that requires a specific Lower Limit of Quantitation?</inlineHelpText>
        <label>List Assays require Lower Quantion Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_List_special_Storage_instruction__c</fullName>
        <externalDeveloperName>APTS_List_special_Storage_instructions__c</externalDeveloperName>
        <inlineHelpText>(e.g. isolate, liquid nitrogen, tissue banking)</inlineHelpText>
        <label>List special Storage instructions</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_List_special_Study_instructions__c</fullName>
        <externalDeveloperName>APTS_List_special_Study_instructions__c</externalDeveloperName>
        <label>List special Study instructions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_List_special_SupplyLogistic_inst__c</fullName>
        <externalDeveloperName>APTS_List_special_SupplyLogistic_inst__c</externalDeveloperName>
        <inlineHelpText>(e.g. EWP, combined shipments, batched shipping, primary &amp; secondary cities, weekend shipments, 3rd party shipments)</inlineHelpText>
        <label>List special Supply-Logistic instruction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_List_special_TAT_requirements_c__c</fullName>
        <externalDeveloperName>APTS_List_special_TAT_requirements__c</externalDeveloperName>
        <inlineHelpText>If there are tests that require a specific turnaround time ( e.g. for inclusion criteria into the study or between visits)?</inlineHelpText>
        <label>List special TAT requirements</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_List_special_Testing_instruction__c</fullName>
        <externalDeveloperName>APTS_List_special_Testing_instructions__c</externalDeveloperName>
        <inlineHelpText>Please guide the team to specific pages in the protocol; Provide a brief outline of testing; Provide detail to any esoteric testing requirements</inlineHelpText>
        <label>List special Testing instructions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_List_specific_test_methodology_c__c</fullName>
        <externalDeveloperName>APTS_List_specific_test_methodology__c</externalDeveloperName>
        <inlineHelpText>Are there tests that are known to require a specific methodology or that should be referred to a specific testing site?</inlineHelpText>
        <label>List specific test methodology</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LockedTotalsCurrencyConversionRa__c</fullName>
        <externalDeveloperName>APTS_LockedTotalsCurrencyConversionRate__c</externalDeveloperName>
        <inlineHelpText>Proposal currency to USD exchange rate   (Locking on Presented).</inlineHelpText>
        <label>Budget exchange rate</label>
        <precision>11</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Locked_Quantity_for_DM_c__c</fullName>
        <externalDeveloperName>APTS_Locked_Quantity_for_DM__c</externalDeveloperName>
        <label>Locked Quantity for DM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Locked_Quantity_for_Logistics_c__c</fullName>
        <externalDeveloperName>APTS_Locked_Quantity_for_Logistics__c</externalDeveloperName>
        <label>Locked Quantity for Logistics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Locked_Quantity_for_PM_c__c</fullName>
        <externalDeveloperName>APTS_Locked_Quantity_for_PM__c</externalDeveloperName>
        <label>Locked Quantity for PM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Logistics_Only_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Logistics_Only__c</externalDeveloperName>
        <label>Logistics Only</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Logistics_Total_c__c</fullName>
        <externalDeveloperName>APTS_Logistics_Total__c</externalDeveloperName>
        <label>Logistics Total</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_LumpSum_Calculation_Eligible_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_LumpSum_Calculation_Eligible__c</externalDeveloperName>
        <inlineHelpText>This is TRUE if the Proposal is eligible for Lumpsum RateCard Inflation.</inlineHelpText>
        <label>LumpSum Calculation Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Lump_Sum_Inflation_Required_c__c</fullName>
        <externalDeveloperName>APTS_Lump_Sum_Inflation_Required__c</externalDeveloperName>
        <label>Lump Sum Inflation Required</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_MDC_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_MDC__c</externalDeveloperName>
        <inlineHelpText>MDC (Medicines Development Centres) is used for GSK therapeutic group. Per Christina Hopper--field is not needed in SF at this time 24Mar2014 as we have the therapy area drop downs.</inlineHelpText>
        <label>MDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Make_Primary_c__c</fullName>
        <externalDeveloperName>APTS_Make_Primary__c</externalDeveloperName>
        <label>Make Primary</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Mobile_App_Setup_Required_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_Mobile_App_Setup_Required__c</externalDeveloperName>
        <label>Mobile App Setup Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_MonthlyRateCardInflationSouthAfr__c</fullName>
        <externalDeveloperName>APTS_MonthlyRateCardInflationSouthAfrica__c</externalDeveloperName>
        <label>Monthly RateCard Inflation South Africa</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Monthly_RateCard_InflationArgent__c</fullName>
        <externalDeveloperName>APTS_Monthly_RateCard_InflationArgentina__c</externalDeveloperName>
        <label>Monthly RateCard Inflation Argentina</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Monthly_RateCard_Inflation_Ameri__c</fullName>
        <externalDeveloperName>APTS_Monthly_RateCard_Inflation_Americas__c</externalDeveloperName>
        <label>Monthly RateCard Inflation Americas</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Monthly_RateCard_Inflation_Asia__c</fullName>
        <externalDeveloperName>APTS_Monthly_RateCard_Inflation_Asia_Pac__c</externalDeveloperName>
        <label>Monthly RateCard Inflation Asia-Pac</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Monthly_RateCard_Inflation_Brazi__c</fullName>
        <externalDeveloperName>APTS_Monthly_RateCard_Inflation_Brazil__c</externalDeveloperName>
        <label>Monthly RateCard Inflation Brazil</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Monthly_RateCard_Inflation_China__c</fullName>
        <externalDeveloperName>APTS_Monthly_RateCard_Inflation_China__c</externalDeveloperName>
        <label>Monthly RateCard Inflation China</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Monthly_RateCard_Inflation_EMEA__c</fullName>
        <externalDeveloperName>APTS_Monthly_RateCard_Inflation_EMEA__c</externalDeveloperName>
        <label>Monthly RateCard Inflation EMEA</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Monthly_RateCard_Inflation_India__c</fullName>
        <externalDeveloperName>APTS_Monthly_RateCard_Inflation_India__c</externalDeveloperName>
        <label>Monthly RateCard Inflation India</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Monthly_RateCard_Inflation_Japan__c</fullName>
        <externalDeveloperName>APTS_Monthly_RateCard_Inflation_Japan__c</externalDeveloperName>
        <label>Monthly RateCard Inflation Japan</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_My_Own_Record_ID_c__c</fullName>
        <externalDeveloperName>APTS_My_Own_Record_ID__c</externalDeveloperName>
        <label>My Own Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_c__c</fullName>
        <externalDeveloperName>APTS_Net_Price__c</externalDeveloperName>
        <inlineHelpText>Rollup summary of net price for all line items excluding logistics</inlineHelpText>
        <label>Net Price (Excluding Logistics)</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_New_Tests_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_New_Tests__c</externalDeveloperName>
        <inlineHelpText>RFTS Required?</inlineHelpText>
        <label>New Tests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_NoOf3PartyLabRecvSampleDrctFromS__c</fullName>
        <externalDeveloperName>APTS_NoOf3PartyLabRecvSampleDrctFromSite__c</externalDeveloperName>
        <inlineHelpText>Default 0 at Pre-award. PM to fill out through LTMS upon award.</inlineHelpText>
        <label>NoOf3rdPartyLabReceiveSampleDrctFromSite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_NoOfThridpartyNonQ2NetworkLab_c__c</fullName>
        <externalDeveloperName>APTS_NoOfThridpartyNonQ2NetworkLab__c</externalDeveloperName>
        <inlineHelpText>Default 0 at Pre-award. PM to fill out through LTMS upon award.</inlineHelpText>
        <label>Number of 3rd party lab we didn&apos;t choose</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_No_Courier_Options_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>APTS_No_Courier_Options__c</externalDeveloperName>
        <label>No Courier Options ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_No_Of_Local_Labs_c__c</fullName>
        <externalDeveloperName>APTS_No_Of_Local_Labs__c</externalDeveloperName>
        <inlineHelpText>Default 0 at Pre-award. PM to fill out through LTMS upon award.</inlineHelpText>
        <label>No Of Local Labs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_No_of_Study_Visits_c__c</fullName>
        <externalDeveloperName>APTS_No_of_Study_Visits__c</externalDeveloperName>
        <label># of Study Visits</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_No_of_Third_Party_Lab_c__c</fullName>
        <externalDeveloperName>APTS_No_of_Third_Party_Lab__c</externalDeveloperName>
        <inlineHelpText>Non Network Labs</inlineHelpText>
        <label>No of Third Party Lab</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_North_America_Region_Name_c__c</fullName>
        <externalDeveloperName>APTS_North_America_Region_Name__c</externalDeveloperName>
        <label>Americas Region Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_North_America_Total_Count_c__c</fullName>
        <externalDeveloperName>APTS_North_America_Total_Count__c</externalDeveloperName>
        <label>North America Total Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Notify_SciAff_Blood_Volume_Ready__c</fullName>
        <externalDeveloperName>APTS_Notify_SciAff_Blood_Volume_Ready__c</externalDeveloperName>
        <label>Notify SciAff Blood Volume Ready</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_NumberOfUniqueOrderEntrySites_c__c</fullName>
        <externalDeveloperName>APTS_NumberOfUniqueOrderEntrySites__c</externalDeveloperName>
        <inlineHelpText>This will hold the number of Unique Order Entry Sites on the Study Locations on a Proposal.</inlineHelpText>
        <label>Number Of Unique Order Entry Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_Algorithms_c__c</fullName>
        <externalDeveloperName>APTS_Number_of_Algorithms__c</externalDeveloperName>
        <label>Number of Algorithms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_Amendments_c__c</fullName>
        <externalDeveloperName>APTS_Number_of_Amendments__c</externalDeveloperName>
        <label>Number of Amendments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_Cohorts_c__c</fullName>
        <externalDeveloperName>APTS_Number_of_Cohorts__c</externalDeveloperName>
        <inlineHelpText>Total number of Cohorts in study, regardless of testing or visit differences. PM to confirm through LTMS upon award.</inlineHelpText>
        <label>Number of Cohorts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_Formats_c__c</fullName>
        <externalDeveloperName>APTS_Number_of_Formats__c</externalDeveloperName>
        <label>Number of Formats</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3+</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Number_of_Hub_Labs_c__c</fullName>
        <externalDeveloperName>APTS_Number_of_Hub_Labs__c</externalDeveloperName>
        <label>Number of Hub Labs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_Inflation_Months_c__c</fullName>
        <externalDeveloperName>APTS_Number_of_Inflation_Months__c</externalDeveloperName>
        <label>Number of Inflation Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_Investigators_c__c</fullName>
        <externalDeveloperName>APTS_Number_of_Investigators__c</externalDeveloperName>
        <label>Number of Investigators</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_Mapping_c__c</fullName>
        <externalDeveloperName>APTS_Number_of_Mapping__c</externalDeveloperName>
        <label>Number of Mapping/Tests</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1 - 5</fullName>
                </value>
                <value>
                    <fullName>6 - 10</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Number_of_New_Tests_c__c</fullName>
        <externalDeveloperName>APTS_Number_of_New_Tests__c</externalDeveloperName>
        <label>Number of New Tests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_Patients_Per_Shipment__c</fullName>
        <externalDeveloperName>APTS_Number_of_Patients_Per_Shipment__c</externalDeveloperName>
        <label>Number of Patients Per Shipment</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
</CustomObject>